Fix horizontal scroll issues on mobile.

--- a/gallery/style.css
+++ b/gallery/style.css
@@ -1,6 +1,8 @@
 html,
 body {
   background-image: linear-gradient(to bottom, black, #4b19af);
+  overflow-x: hidden;
+  position: relative;
 }
 
 body {
